03 change select color popover style

--- a/frontend/src/components/popover/list-tag-popover.css
+++ b/frontend/src/components/popover/list-tag-popover.css
@@ -24,3 +24,8 @@
 .list-tag-popover .tag-list-footer a:hover {
   text-decoration: none;
 }
+
+.list-tag-popover .tag-color {
+  width: 20px;
+  height: 20px;
+}
