--- a/media/sdoc-editor/sdoc-editor-font.css
+++ b/media/sdoc-editor/sdoc-editor-font.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "sdocfont"; /* Project id 4097705 */
-  src: url('./sdoc-editor-font/iconfont.eot?t=1694758459474'); /* IE9 */
-  src: url('./sdoc-editor-font/iconfont.eot?t=1694758459474#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./sdoc-editor-font/iconfont.woff2?t=1694758459474') format('woff2'),
-       url('./sdoc-editor-font/iconfont.woff?t=1694758459474') format('woff'),
-       url('./sdoc-editor-font/iconfont.ttf?t=1694758459474') format('truetype'),
-       url('./sdoc-editor-font/iconfont.svg?t=1694758459474#sdocfont') format('svg');
+  src: url('./sdoc-editor-font/iconfont.eot?t=1695017062235'); /* IE9 */
+  src: url('./sdoc-editor-font/iconfont.eot?t=1695017062235#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('./sdoc-editor-font/iconfont.woff2?t=1695017062235') format('woff2'),
+       url('./sdoc-editor-font/iconfont.woff?t=1695017062235') format('woff'),
+       url('./sdoc-editor-font/iconfont.ttf?t=1695017062235') format('truetype'),
+       url('./sdoc-editor-font/iconfont.svg?t=1695017062235#sdocfont') format('svg');
 }
 
 .sdocfont {
@@ -14,6 +14,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.sdoc-link-file:before {
+  content: "\e654";
 }
 
 .sdoc-sm-close:before {
