--- a/frontend/src/css/search.css
+++ b/frontend/src/css/search.css
@@ -87,7 +87,7 @@
 }
 
 .search-result-container .search-result-list {
-  margin: 10px 0;
+  margin: 4px 0;
   padding: 0;
   list-style: none;
 }
@@ -98,7 +98,7 @@
 
 .search-result-container .search-result-item {
   display: flex;
-  padding: 0.25rem 0;
+  padding: 10px 0 10px 8px;
   font-size: 0.8125rem;
   cursor: pointer;
   margin-right: 1rem;
@@ -106,7 +106,7 @@
 
 .search-result-container .search-result-item:hover {
   background-color: #f0f0f0;
-  border-radius: 5px;
+  border-radius: 4px;
 }
 
 .search-result-item .item-img {
