[dir view] 'list' mode: fixed position of the 'tag edit' popover for file items without tags

--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -1023,6 +1023,7 @@ a.table-sort-op:hover {
     display: flex;
     align-items: center;
     width: max-content;
+    min-height: 1rem;
 }
 
 /* react select-module */
