--- a/frontend/src/css/search.css
+++ b/frontend/src/css/search.css
@@ -102,11 +102,11 @@
   font-size: 0.8125rem;
   cursor: pointer;
   margin-right: 1rem;
+  border-radius: 4px;
 }
 
-.search-result-container .search-result-item:hover {
+.search-result-container .search-result-item.search-result-item-highlight {
   background-color: #f0f0f0;
-  border-radius: 4px;
 }
 
 .search-result-item .item-img {
