fix bug when send share link verification code when language is Italian

--- a/seahub/share/templates/share/share_link_audit.html
+++ b/seahub/share/templates/share/share_link_audit.html
@@ -60,7 +60,7 @@ $('#get-code').on('click', function() {
             email: email
         },
         success: function() {
-            feedback('{% trans "A verification code has been sent to the email." %}', 'success');
+            feedback("{% trans "A verification code has been sent to the email." %}", 'success');
         },
         error: function(xhr) {
             var error_msg = prepareAjaxErrorMsg(xhr);
