[my libs] added submenu 'Advanced' to the dropdown menu of each library item

--- a/media/css/seahub_react.css
+++ b/media/css/seahub_react.css
@@ -952,6 +952,15 @@ a.table-sort-op:hover {
   color: #212529;
   font-size: 14px;
 }
+
+.btn-secondary.dropdown-toggle.dropdown-item {
+  line-height: 1.5;
+}
+
+.show>.btn-secondary.dropdown-toggle.dropdown-item {
+  color: #fff;
+  background-color: #20a0ff;
+}
   
 /* empty-tip */
 .empty-tip {
