search file use ai

--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -145,6 +145,7 @@
             enableOnlyoffice: {% if enableOnlyoffice %} true {% else %} false {% endif %},
             onlyofficeConverterExtensions: {% if onlyofficeConverterExtensions %} {{onlyofficeConverterExtensions|safe}} {% else %} null {% endif %},
             enableSeadoc: {% if enable_seadoc %} true {% else %} false {% endif %},
+            enableSeafileAI: {% if enable_seafile_ai %} true {% else %} false {% endif %},
         }
      };
 </script>
