delete ... in search and select component

--- a/seahub/institutions/templates/institutions/base.html
+++ b/seahub/institutions/templates/institutions/base.html
@@ -20,7 +20,7 @@
         </ul>
 
         <form action="{% url 'institutions:useradmin_search' %}" method="get" class="side-search-form">
-            <input type="text" name="q" class="input" value="{{q}}" placeholder="{% trans "Search users..." %}" />
+            <input type="text" name="q" class="input" value="{{q}}" placeholder="{% trans "Search users" %}" />
         </form>
         {% endblock %}
     </div>
