--- a/frontend/src/css/draft.css
+++ b/frontend/src/css/draft.css
@@ -1,3 +1,9 @@
+#wrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+}
+
 .header .button-group {
   display: flex;
   align-items: center;
