--- a/frontend/src/css/markdown-viewer/markdown-editor.css
+++ b/frontend/src/css/markdown-viewer/markdown-editor.css
@@ -1,3 +1,8 @@
+html, body, #root {
+  width: 100%;
+  height: 100%;
+}
+
 #root {
   display: flex;
   flex-direction: column;
@@ -167,4 +172,11 @@
 .topbar-file-info .file-state .file-modifier-savedraft {
   margin-left: 0.5rem;
   color: #888;
+}
+
+.sf-md-viewer-content {
+  flex: 1;
+  display: flex;
+  min-height: 0;
+  min-width: 0;
 }
