only EX-PORPS set display ex-props

--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -146,6 +146,7 @@
             onlyofficeConverterExtensions: {% if onlyofficeConverterExtensions %} {{onlyofficeConverterExtensions|safe}} {% else %} null {% endif %},
             enableSeadoc: {% if enable_seadoc %} true {% else %} false {% endif %},
             enableSeafileAI: {% if enable_seafile_ai %} true {% else %} false {% endif %},
+            canSetExProps: {% if can_set_ex_props %} true {% else %} false {% endif %},
         }
      };
 </script>
