--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -147,6 +147,7 @@
             enableSeadoc: {% if enable_seadoc %} true {% else %} false {% endif %},
             enableSeafileAI: {% if enable_seafile_ai %} true {% else %} false {% endif %},
             canSetExProps: {% if can_set_ex_props %} true {% else %} false {% endif %},
+            enableSeaTableIntegration: {% if enable_seatable_integration %} true {% else %} false {% endif %},
         }
      };
 </script>
