--- a/seahub/templates/sdoc_file_view_react.html
+++ b/seahub/templates/sdoc_file_view_react.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block extra_data %}
+isPro: '{{ is_pro }}',
 docPath: '{{ path|escapejs }}',
 docName: '{{ filename|escapejs }}',
 docUuid: '{{ file_uuid }}',
